# 0.0.41
# Stable version.
# Styled filelist to display better across all pages.
# Started working on client app

# 0.0.41
# Started working on Mac app.
# Super basic layout as I learn how to program a GUI in go 😳
# Close button works though 😎

# 0.0.40
# Added tailwinds CSS and tested that it works.
# Stripped CSS to begin implementing Tailwind
# Re-did BrowserRouter so that the Nav/Footer don't re-render when clicking between pages.
# Added basic page layout, using Tailwind.
# Finished Stripping leftover CSS that was left over.
# Re-styled layout back to a good standard, using Tailwind CSS.

# 0.0.39
# Started implement on Dashboard UI
# Added CC BY-NC-SA 4.0 International License
# Re-implemeted the API to fetch data from SQL DB to display on dashboard.

# 0.0.38
# Previous commit broke git.. testing things out again.
# github repo hotfix worked!
# Updated sessions UI to include file list, Functions not implemented yet.

# 0.037
# Forgot to log this version in here.
# It's documented inside the 'react-is' repo.

# 0.0.36
# Previously we used 'npm create-react-app' to get started developing.
# Merging code into new app using 'npm create vite@latest' to reduce bloatware.
# Built new app's layout/link system
# Began hosting on [inSessionEvent.com](https://inSessionEvent.com)
# Improved overall layout, connected APIs as features were enabled.
# However, localdev database is missing data from previous dev database.
# Calling this a stopping point since several I've written dozens if not hundreds of lines today without commiting once oops.

# 0.035
# Create user Front end WIP

# 0.034
# Stable version
# create subsession Works
# create session Works
# Fixed register bug
# Add session has a dropdown option to list presenters
# Edited login/logout/register behavior

# 0.033
# stable version
# subsession file progress ✅
# session progress WIP
# Formatted time display
# [Session] add new Subsession WIP

# 0.032
# Dashboard displays session count