@@ -7,6 +7,7 @@
 # Started working on Mac app.
 # Super basic layout as I learn how to program a GUI in go 😳
 # Close button works though 😎
+# Layout taking better shape. Playing with NewSpacer() to format layout.
 
 # 0.0.40
 # Added tailwinds CSS and tested that it works.
